--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ serde          = "1.0.112"
 rand           = { version = "0.8.3", features = ["small_rng"] }
 hyper          = { version = "0.14.5", features = ["client", "tcp", "http1", "server"] }
 http           = "0.2.1"
+hyper-tls      = "0.5.0"
+async-trait    = "0.1.74"
+tokio          = { version = "1.34.0", features = ["full"] }
